# JustDiceRollBot

./: LICENSE
node/: .editorconfig  package-lock.json  package.json  tsconfig.json
node/src/: bot.ts
rust/: Cargo.toml  README.md  scripts.sh
rust/src/: main.rs
