[package]
name = "just_dice_roll_bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1

[dependencies]
futures = "0.3.30"
rand = "^0.8.5"
serde = { version = "^1.0.209", features = ["derive"] }
serde_json = "^1.0.127"
telegram-bot = "^0.8.0"
tokio = { version = "^1.39.3", features = ["full"] }

[lints.clippy]
needless_return = "allow"
